# target-hdfs

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  config.sample.json  meltano.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: github-actions-test-lint.yml  test.yml
target_hdfs/: __init__.py  hdfs_client.py  helpers.py  sinks.py  target.py
target_hdfs/utils/: __init__.py  hdfs.py  parquet.py
test/: test_helpers.py  test_persist.py
tests/: __init__.py  test_core.py  test_helpers.py  test_persist.py  test_sinks.py
tests/utils/: test_hdfs.py  test_parquet.py
