[tool.poetry]
name = "target-hdfs"
version = "1.0.0"
description = "`target-hdfs` is a Singer target for hdfs, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Joao Amaral <joao.amaral@automattic.com>"]
keywords = [
    "ELT",
    "hdfs",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.34.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
pyarrow = "~=14.0.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.34.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
src = ["target_hdfs"]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_hdfs"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-hdfs = 'target_hdfs.target:Targethdfs.cli'
